--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>Dashkiosk</title>
   </head>
-  <body>
+  <body class="bg-light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
